# nockster

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  Makefile  README.md  build-fw.sh  cli-test.sh  diagram.json  disconnect-usb.sh  flash-esp.sh  index.html  partitions.csv  rust-toolchain.toml  wokwi.toml  wowki.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-web.yml  desktop-release.yml  firmware-release.yml
crates/nicker/: Cargo.toml  config.toml
crates/nicker/src/: config.rs  main.rs  rpc.rs  signer.rs  tracer.rs  words.rs
crates/nockster-cli/: Cargo.toml
crates/nockster-cli/src/: cli.rs  keys.rs  main.rs  serial.rs  ui.rs  util.rs
crates/nockster-cli/tests/: check_known_good_draft.rs  compare_hashers.rs  compare_tx_files.rs  debug_tip5.rs  debug_tip5_internals.rs.disabled  debug_tip5_steps.rs  debug_tip5_trace.rs.disabled  decode_known_good_draft.rs  inspect_draft.rs  test_manual_arithmetic.rs  test_modular_arithmetic.rs  test_reference_signing.rs  v1_signing.rs  verify_test_signed.rs
crates/nockster-core/: Cargo.toml
crates/nockster-core/src/: cheetah.rs  extended_key.rs  lib.rs  shamir.rs  update.rs  wallet_keyfile.rs
crates/nockster-core/tests/: draft_sign_v1.rs  protocol_fixtures.rs
crates/nockster-fw/: Cargo.toml  build.rs
crates/nockster-fw-emu/: Cargo.toml  build.rs
crates/nockster-fw-emu/src/: display.rs  gui.rs  lib.rs
crates/nockster-fw-emu/src/gui/: time.rs
crates/nockster-fw/.devcontainer/: devcontainer.json
crates/nockster-fw/src/: lib.rs  security.rs
crates/nockster-fw/src/axs5106l/: mod.rs
crates/nockster-fw/src/nvs_store/: mod.rs
crates/nockster-wasm/: Cargo.toml  rust-toolchain.toml
crates/nockster-wasm/src/: compose_v1.rs  lib.rs  review_v1.rs  tip5.rs
crates/nockster-wasm/tests/: compare_hashables.rs
crates/siger-cli/: Cargo.toml
crates/siger-cli/src/: address.rs  cli.rs  keys.rs  main.rs  serial.rs  util.rs
crates/siger-cli/src/commands/: health.rs  info.rs  inspect.rs  mod.rs  plan.rs  reset.rs  security.rs  seed.rs  sign_draft.rs  sign_tx.rs  smoke.rs  test.rs  unlock.rs
crates/siger-cli/tests/: artifact_comparison.rs.disabled  check_known_good_draft.rs  compare_hashers.rs  compare_known_good.rs  compare_pubkeys.rs  compare_transactions.rs.disabled  compare_tx_files.rs  crypto_comparison.rs.disabled  debug_message_format.rs  debug_signing.rs.disabled  debug_tip5.rs  debug_tip5_internals.rs.disabled  debug_tip5_steps.rs  debug_tip5_trace.rs.disabled  decode_known_good_draft.rs  inspect_draft.rs  reproduce_signature.rs  schnorr_detailed.rs.disabled  test_fixed_signing.rs  test_full_signature.rs  test_known_good_signature.rs.disabled  test_manual_arithmetic.rs  test_modular_arithmetic.rs  test_reference_signing.rs  test_signature_components.rs  test_with_reference_vector.rs  v1_signing.rs  verify_test_signed.rs
crates/siger-core/: Cargo.toml
crates/siger-core/src/: cheetah.rs  lib.rs
crates/siger-core/src/draft_sign/: mod.rs  noun_codec.rs  tip5.rs  tx_v1.rs  zmap.rs
crates/siger-core/src/math/: math.rs
crates/siger-core/src/noun/: belt.rs  mod.rs  noun_serde.rs
crates/siger-core/tests/: draft_sign_v1.rs
crates/siger-fw/: Cargo.toml  build.rs
crates/siger-fw/.devcontainer/: devcontainer.json
crates/siger-fw/src/: lib.rs  nvs_store.rs  security.rs
crates/siger-fw/src/axs5106l/: LICENSE  mod.rs
crates/siger-fw/src/nvs_store/: mod.rs
crates/siger-wasm/: Cargo.toml
crates/siger-wasm/.cargo/: config.toml
crates/siger-wasm/src/: compose_v1.rs  lib.rs  tip5.rs
crates/siger-wasm/tests/: compare_hashables.rs
crates/tx-types/: Cargo.toml
crates/tx-types/src/: lib.rs  transaction_types.rs  tx_to_noun.rs  u320.rs
crates/tx-types/src/collections/: mod.rs  zmap.rs  zset.rs
crates/tx-types/src/hashing/: hashable.rs  hasher.rs  mod.rs  tip5.rs  tx_id.rs
crates/tx-types/src/tests/: mod.rs  test_base58_conversion.rs  test_complex_input.rs  test_empty_hashes.rs  test_schnorr_pubkey_hash.rs  test_schnorr_signature_hash.rs  test_signature_hash.rs  test_signature_hashable.rs  test_zmap_structure.rs  test_zset_simple.rs  test_zset_structure.rs  timelock_tests.rs
crates/tx-types/src/validation/: mod.rs  validator.rs
docker/firmware/: Dockerfile  build-entry.sh
docs/: hardware-smoke.md  preimage-vault.md  secure-updates.md  security.md  wallet-keyfile-interop.md
enclosure/: enclosure_cap.stl  enclosure_tray.stl
manual/: book.toml
manual/src/: SUMMARY.md
manual/src/advanced/: cli.md  composer.md  preimage-vault.md  wallet-interop.md
manual/src/guide/: about.md  basic-use.md  firmware-updates.md  first-seed.md  setup.md  signing.md  troubleshooting.md
nockster-js/: README.md  package.json
nockster-js/src/: cobs.ts  device.ts  index.ts  postcard.ts  protocol.ts  types.d.ts
nockster-js/test/: device.test.mjs  protocol-fixtures.test.mjs  protocol.test.mjs  update-bundle.test.mjs
nockster-js/test/fixtures/: protocol-fixtures.txt
pytest/: bip39.py  bip39.txt
run/: diagram.json
scripts/provision/: README.md  burn-flash-encryption-key.sh  burn-hmac-up.sh  burn-lockdown-fuse.sh  burn-secure-boot-v2-digest.sh  check-release-image.sh  check-secret-output-path.sh  efuse-summary.sh  enable-flash-encryption.sh  generate-flash-encryption-key.sh  generate-hmac-up-key.sh  generate-secure-boot-v2-key.sh  provision-plan.sh  release-preflight.sh  sign-secure-boot-v2.sh  validate-device-state.sh
siger-js/: LIBRARY_INFO.md  README.md  USAGE.md  package-lock.json  package.json
siger-js/src/: cheetah.ts  cobs.ts  device.ts  index.ts  postcard.ts  protocol.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
web/: README.md  compare.cjs  index.html  package-lock.json  package.json  vite.config.ts
web/public/: CNAME  manifest.webmanifest  sw.js
web/src/: App.css  App.tsx  NounInspector.tsx  bip39.ts  main.tsx  serial.ts  shamirSeedShares.ts  types.d.ts
web/src/composer/: Composer.css  Composer.tsx  TxTree.tsx  model.ts  nockblocks.ts  nodes.tsx  (+2 more)
(+32 files in other folders)
