[package]
name         = "nockster-fw"
authors      = ["Southwestern Pool Supply Co", "SWPSCo <howdy@swps.io>"]
edition      = "2021"
rust-version = "1.86"
version      = "0.1.0"
build        = "build.rs"

[[bin]]
name = "nockster-fw"
path = "./src/bin/main.rs"

[features]
default = []
chip-security = []

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }
esp-alloc = "0.8.0"
esp-storage = { version = "0.3", default-features = false, features = ["esp32s3", "storage", "nor-flash", "critical-section"] }
embedded-storage = { version = "0.3", default-features = false }
embedded-hal = { version = "1.0.0", default-features = false }
panic-halt = "0.2"
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }

# Protocol (no_std)
serde = { workspace = true, default-features = false, features = ["derive"] }
postcard = { workspace = true, default-features = false }
cobs = { workspace = true, default-features = false }
heapless = { workspace = true, features = ["serde"] }
serde-big-array = { version = "0.5",    default-features = false }
signature = { version = "2", default-features = false } # trait used by k256
bip32 = { version = "0.5", default-features = false, features = ["secp256k1", "alloc"] }
k256  = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
ripemd = { version = "0.1", default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
hmac = { version = "0.12", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
critical-section = "1.1"
micromath = { version = "2.1.0", default_features = false }
mipidsi = { version = "0.8", default-features = false }
display-interface-spi = { version = "0.5", default-features = false }
embedded-hal-bus = { version = "0.1", default-features = false }
embedded-graphics-core = { version = "0.4", default-features = false }
embedded-graphics = { version = "0.8.1", default-features = false }
nb = "1.1"
usb-device = { version = "0.3.2", default-features = false }
usbd-hid = { version = "0.8.2", default-features = false }

nockster-core = { path = "../nockster-core", default-features = false }


[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[build-dependencies]
image = { version = "0.24" }
