[package]
name = "nockster-wasm"
authors = ["Southwestern Pool Supply Co", "SWPSCo <howdy@swps.io>"]
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"

tx-types = { workspace = true, features = ["std"] }
# core, for its tested Shamir GF(256) math — keeps the share format from
# diverging across host and device. std features match the rest of the build
# (tx-types is already pinned to std here).
nockster-core = { path = "../nockster-core" }
bs58 = "0.5"
sha2 = "0.10"
# nockster-core's std deps pull getrandom 0.2, which needs the js backend on
# wasm32 (same as nockster-fw-emu). We don't call it; this only satisfies the
# target gate.
getrandom = { version = "0.2", features = ["js"] }
nockapp = {workspace = true }
nockvm = { workspace = true, features = ["malloc"] }
noun-serde = { workspace = true }
bytes = "1.5"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[lints]
workspace = true
