[package]
name = "siger-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
std = [
  "k256/std",
  "bip32/std",
  "bip39/std",
  "serde/std",
  # postcard has a "use-std" feature if you ever want it on host; keep it off for fw
]
default = ["std"]
alloc-path = []

[dependencies]
# Pure, no_std + alloc crypto. No randomness needed for RFC6979 ECDSA.
k256   = { version = "0.13", default-features = false, features = ["ecdsa", "schnorr", "alloc"] }

bip32  = { version = "0.5",  default-features = false, features = ["secp256k1", "alloc"] }
bip39  = { version = "2",    default-features = false }
sha2   = { version = "0.10", default-features = false }
hmac   = { version = "0.12", default-features = false }
zeroize= { version = "1",    default-features = false }
heapless = { workspace = true, features = ["serde"] }
serde-big-array = { workspace = true, default-features = false }
bs58   = { version = "0.5",  default-features = false, features = ["alloc"] }

serde  = { workspace = true, default-features = false, features = ["derive"] }
serde_bytes = { workspace = true }
postcard= { workspace = true, default-features = false }
