[package]
edition      = "2021"
name         = "siger-fw"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "siger-fw"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }
esp-alloc = "0.8.0"
panic-halt = "0.2"
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

# Protocol (no_std)
serde = { workspace = true, default-features = false, features = ["derive"] }
postcard = { workspace = true, default-features = false }
cobs = { workspace = true, default-features = false }
heapless = { workspace = true, features = ["serde"] }
serde-big-array = { version = "0.5",    default-features = false }
signature = { version = "2", default-features = false } # trait used by k256
bip32 = { version = "0.5", default-features = false, features = ["secp256k1", "alloc"] }
k256  = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
ripemd = { version = "0.1", default-features = false }
ibig = { version = "0.3", default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
hmac = { version = "0.12", default-features = false }

# Your shared core lib (keep as you have it; just ensure it's no_std for FW)
siger-core = { path = "../siger-core", default-features = false }
# nicker = { path = "../nicker", default-features = false }


[profile.release]
codegen-units    = 1 
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false