[package]
name = "siger-wasm"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Transaction types and noun handling
tx-types = { workspace = true, features = ["std"] }
nockapp = {workspace = true }
nockvm = { workspace = true }
noun-serde = { workspace = true }
bytes = "1.5"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[lints]
workspace = true
