[package]
name = "siger-wasm"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"  # Optimize for size

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Transaction types and noun handling
# Use local tx-types with WASM patches instead of workspace version
tx-types = { path = "../../../tx-types/tx-types", features = ["std"] }
nockapp = { path = "../../../tx-types/nockchain-core/crates/nockapp" }
nockvm = { path = "../../../tx-types/nockchain-core/crates/nockvm/rust/nockvm", features = ["malloc"] }
noun-serde = { path = "../../../tx-types/nockchain-core/crates/noun-serde" }
bytes = "1.5"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[lints]
workspace = true
