[package]
name = "tx-types"
version = "0.1.0"
edition = "2021"

[dependencies]
noun-serde = { workspace = true }
nockapp = { workspace = true }
nockvm = { workspace = true }
nockchain-libp2p-io = { workspace = true }
zkvm-jetpack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ibig = { workspace = true }
either = { workspace = true }
num-bigint = "0.4"
bs58 = "0.5"
anyhow = "1.0.75"
num-traits = "0.2.19"

[dev-dependencies]